# LLM-Investment-Copilot

./: .gitignore  CACHING_IMPLEMENTATION_PLAN.md  DEBUG_GUIDE.md  OPTION_DATA_PLAN.md  PYTHON_3.14_COMPATIBILITY_REPORT.md  PYTHON_3.14_MIGRATION_CHECKLIST.md  README.md  STOCK_QUOTE_INTEGRATION.md  TESTING_GUIDE.md  countlines.ps1  pyproject.toml
config/: env.backtest.yaml  env.live.yaml  secrets.yaml.example  strategy.adaptive_dca.yaml  strategy.controlled_panic_bear.yaml  strategy.example.yaml  strategy.leveraged_etf_vol_swing.yaml  strategy.llm_trend_detection.yaml  strategy.mystic_pulse.yaml  strategy.regular_dca.yaml  strategy.wheel.yaml
config/old/: strategy.adaptive_dca.old2.yaml
core/backtest/: backtest_utils.py  benchmarks.py  chart_utils.py  comparison.py  context.py  data_provider.py  decision_tracker.py  engine.py  equity_tracker.py  orchestrator.py  performance.py  result.py  scheduler.py
core/data/: __init__.py  base.py  cache.py  cached_engine.py  factory.py  fear_greed_index.py  marketdata_app.py  moomoo_data.py  provider.py  trading_calendar.py  wheel_view.py  yfinance_data.py
core/execution/: base.py  moomoo_exec.py  simulated.py
core/live/: engine.py
core/models/: bar.py  fill.py  llm_trend.py  option.py  order.py  portfolio_state.py  position.py
core/portfolio/: portfolio.py
core/risk/: risk_manager.py
core/strategy/: adaptive_dca.py  base.py  contributions.py  controlled_panic_bear.py  example_strategy.py  leveraged_etf_vol_swing.py  llm_trend_detection.py  mystic_pulse.py  registry.py  wheel.py  (+2 more)
docs/: CACHING.md  DATA_SOURCE_CONFIGURATION.md  LEVERAGED_ETF_VOLATILITY_SWING_STRATEGY_SPEC.md  PLOTLY_CHART_USAGE.md  REFACTORING_SUMMARY.md  SIGNAL_ALIGNMENT_FIXES.md  TIMESTAMP_NORMALIZATION.md  TRADING_DAYS_USAGE.md  YFINANCE_CAPABILITIES.md
mcp/: server.ts
plan/: LEVERAGED_ETF_VOLATILITY_SWING_IMPLEMENTATION_PLAN.md  UX_PATH_A_CHECKLIST.md  UX_PATH_A_PROJECT_PLAN.md
scripts/: LOGS.TXT  assistant_format_smoketest.py  chart_AAPL_20251127_100353.html  clear_llm_cache.py  inspect_cache.py  inspect_llm_cache.py  multi_user_chat_isolation_smoketest.py  run_backtest_LLM_Trend_Detection.py  run_backtest_adaptive_dca.py  run_backtest_controlled_panic_bear.py  run_backtest_leveraged_etf.py  run_backtest_mystic_pulse.py  run_backtest_wheel.py  run_live_wheel.py  test_data_config.py  test_fear_greed.py  test_openai_api.py  test_wheel_performance.py  test_yfinance_adapter.py  web_search_smoketest.py
ux_path_a/: .gitignore  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  ORCHESTRATOR_FLOW.md  QUICK_DEPLOY.md  QUICK_START.md  RAILWAY_FIX.md  RAILWAY_SOLUTION2.md  README.md  SETUP_COMPLETE.md
ux_path_a_skeletontest/: README.md
(+123 files in other folders)
