[project]
name = "LLM-Investment-Copilot"
version = "0.1.0"
description = "Wheel strategy trading framework with MarketData.app backtesting and moomoo live trading."
requires-python = ">=3.11,<3.15"  # Python 3.14.2 compatible, update to ">=3.14" after migration
dependencies = [
    "httpx>=0.27.0",
    "PyYAML>=6.0.0",
    "numpy>=1.26.0,<2.0.0",
    "matplotlib>=3.8.0",
    "flask>=3.0.0",
    "pandas>=2.0.0,<2.3.0",
    "pyarrow>=14.0.0",
    "plotly>=5.18.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "yfinance>=0.2.0",
    "exchange-calendars>=4.3.0",
]

[tool.setuptools]
py-modules = []
