[project]
name = "LLM-Investment-Copilot"
version = "0.1.0"
description = "Wheel strategy trading framework with MarketData.app backtesting and moomoo live trading."
requires-python = ">=3.11,<3.15"  # Python 3.14.2 compatible, update to ">=3.14" after migration
dependencies = [
    "numpy>=1.26.0,<2.0.0",
    "PyYAML>=6.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Data / caching / calendars used by core.data and tools
data = [
    "pandas>=2.0.0,<2.3.0",
    "pyarrow>=14.0.0",
    "yfinance>=0.2.0",
    "exchange-calendars>=4.3.0",
]

# Visualization utilities (not required for Railway backend runtime)
viz = [
    "plotly>=5.18.0",
    "matplotlib>=3.8.0",
]

# Optional web UI utilities outside ux_path_a
web = [
    "flask>=3.0.0",
]

# UX Path A backend runtime deps (FastAPI service)
ux_path_a_backend = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg2-binary>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "openai>=1.3.5",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",
    "python-dateutil>=2.8.2",
    "ddgs>=9.10.0",
    "trafilatura>=2.0.0",
    "structlog>=23.2.0",
]

# Dev/test tooling
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[tool.setuptools]
py-modules = []
